<resources>
    <string name="app_name">Investment Simulator App</string>

    <!-- Input Screen -->
    <string name="value_input">Quanto você gostaria de aplicar? *</string>
    <string name="date_input">Qual a data de vencimento do investimento? *</string>
    <string name="cdi_percentage_input">Qual o percentual do CDI do investimento? *</string>

    <string name="value_input_hint">R$</string>
    <string name="date_input_hint">dia/mês/ano</string>
    <string name="cdi_percentage_input_hint">100%</string>

    <!-- Result Screen -->
    <string name="result_title">Resultado da simulação</string>
    <string name="total_income">Rendimento total de R$ %.2f</string>

    <string name="applied_value">Valor aplicado incialmente</string>
    <string name="gross_value">Valor bruto do investimento</string>
    <string name="income_value">Valor do rendimento</string>
    <string name="income_tax">IR sobre o investimento</string>
    <string name="net_value">Valor líquido do investimento</string>

    <string name="redemption_date">Data do resgate</string>
    <string name="consecutive_days">Dias corridos</string>
    <string name="monthly_income">Rendimento mensal</string>
    <string name="cdi_percentage">Percentual do CDI do investimento</string>
    <string name="annual_profitability">Rentabilidade anual</string>
    <string name="period_profitability">Rentabilidade no período</string>

    <string name="simulate_button">Simular</string>
    <string name="simulate_again_button">Simular novamente</string>

    <string name="real_value">R$ %.2f</string>
    <string name="percentage_value">%.2f%%</string>
    <string name="income_tax_value">R$ %.2f(%.2f%%)</string>
    <string name="date_result">%1$s</string>

    <!-- Error messages -->
    <string name="error_invalid_value">Insira uma quantia válida</string>
    <string name="error_invalid_date">Insira uma data válida</string>
    <string name="error_invalid_rate">Insira um percentual válido</string>
    <string name="error_simulation_failed">Não foi possível realizar a simulação. Tente novamente mais tarde.</string>
    <string name="simulation_successfully">Confira os resultados da simulação!</string>

</resources>
