<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_margin"
        tools:context=".ui.InputActivity">

        <TextView
            android:id="@+id/tv_value_input_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value_input"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/et_value_input"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/et_value_input"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:layout_marginBottom="@dimen/edit_text_margin_bottom"
            android:layout_marginStart="@dimen/edit_text_horizontal_margin"
            android:layout_marginEnd="@dimen/edit_text_horizontal_margin"
            android:layout_marginLeft="@dimen/edit_text_horizontal_margin"
            android:layout_marginRight="@dimen/edit_text_horizontal_margin"
            android:gravity="center_horizontal"
            android:hint="@string/value_input_hint"
            android:textSize="@dimen/input_font_size"
            android:inputType="text"
            android:textColorLink="@color/colorPrimaryDark"
            android:background="@drawable/edit_text_drawable"
            app:layout_constraintTop_toBottomOf="@id/tv_value_input_title"
            app:layout_constraintBottom_toTopOf="@id/tv_date_input_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_date_input_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_input"
            app:layout_constraintTop_toBottomOf="@id/et_value_input"
            app:layout_constraintBottom_toTopOf="@id/et_date_input"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/et_date_input"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:layout_marginBottom="@dimen/edit_text_margin_bottom"
            android:layout_marginStart="@dimen/edit_text_horizontal_margin"
            android:layout_marginEnd="@dimen/edit_text_horizontal_margin"
            android:layout_marginLeft="@dimen/edit_text_horizontal_margin"
            android:layout_marginRight="@dimen/edit_text_horizontal_margin"
            android:gravity="center_horizontal"
            android:hint="@string/date_input_hint"
            android:textSize="@dimen/input_font_size"
            android:inputType="text"
            android:background="@drawable/edit_text_drawable"
            app:layout_constraintTop_toBottomOf="@id/tv_date_input_title"
            app:layout_constraintBottom_toTopOf="@id/tv_cdi_percentage_input_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_cdi_percentage_input_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cdi_percentage_input"
            app:layout_constraintTop_toBottomOf="@id/et_date_input"
            app:layout_constraintBottom_toTopOf="@id/et_cdi_percentage_input"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/et_cdi_percentage_input"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:layout_marginBottom="@dimen/edit_text_margin_bottom"
            android:layout_marginStart="@dimen/edit_text_horizontal_margin"
            android:layout_marginEnd="@dimen/edit_text_horizontal_margin"
            android:layout_marginLeft="@dimen/edit_text_horizontal_margin"
            android:layout_marginRight="@dimen/edit_text_horizontal_margin"
            android:gravity="center_horizontal"
            android:hint="@string/cdi_percentage_input_hint"
            android:textSize="@dimen/input_font_size"
            android:inputType="text"
            android:background="@drawable/edit_text_drawable"
            app:layout_constraintTop_toBottomOf="@id/tv_cdi_percentage_input_title"
            app:layout_constraintBottom_toTopOf="@id/bt_simulate"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/bt_simulate"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/button_horizontal_margin"
            android:layout_marginEnd="@dimen/button_horizontal_margin"
            android:layout_marginLeft="@dimen/button_horizontal_margin"
            android:layout_marginRight="@dimen/button_horizontal_margin"
            android:text="@string/simulate_button"
            android:textColor="@android:color/white"
            android:background="@drawable/button_drawable"
            app:layout_constraintTop_toBottomOf="@id/et_cdi_percentage_input"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>